--- a/402-quantenlung-von-energie/latex/3_balmerserie.tex
+++ b/402-quantenlung-von-energie/latex/3_balmerserie.tex
@@ -9,21 +9,21 @@ wobei beim Übergang zurück in den niedrigeren Zustand (im Bohr-Modell in eine 
 \begin{align} \label{eq:lambda_übergang}
 	\nu = \frac{1}{\lambda} = \text{Ry}\cdot \left( \frac{1}{n_f^2}-\frac{1}{n_i^2} \right)
 \end{align}
-vom Atom emittiert wird. $n_i$ und $n_f$ sind dabei die ganzzahligen Hauptquantenzahlen des Atomzustands mit $n_f < n_i$ %\cite[110]{Demtroeder3}.
+vom Atom emittiert wird. $n_i$ und $n_f$ sind dabei die ganzzahligen Hauptquantenzahlen des Atomzustands mit $n_f < n_i$ \cite[110]{Demtroeder3}.
 $\text{Ry}$ ist hierbei die Rydbergkonstante für das betrachtete Atom:
 \begin{align} \label{eq:rydbergkonst}
 	\text{Ry}=\text{Ry}_\infty \frac{\mu}{m_e}
 \end{align}
 
-mit der exakt festgelegten Rydbergkonstante in Näherung für unendliche Kernmasse $\text{Ry}_\infty=\SI{10973731.568157}{1/\meter^{-1}}$ %\cite{KonstantenNIST}
+mit der exakt festgelegten Rydbergkonstante in Näherung für unendliche Kernmasse $\text{Ry}_\infty=\SI{10973731.568157}{1/\meter^{-1}}$ \cite{KonstantenNIST}
 und reduzierter Atommasse $\mu = \frac{m_e\cdot m_K}{m_e + m_K}$
-\footnote{mit $m_e = \SI{9.109e-31}{\kg}$ Elektronenmasse %\cite{KonstantenNIST} 
+\footnote{mit $m_e = \SI{9.109e-31}{\kg}$ Elektronenmasse \cite{KonstantenNIST} 
 und $m_K$ Kernmasse}. Für Isotope eines Atoms, die sich in Neutronenzahl und damit Kernmasse $m_K$ unterscheiden, ergeben sich so geringfügig unterschiedliche Werte für $\text{Ry}$ und $\nu$ der Spektrallinien. Im Versuch werden Wasserstoff und sein Isotop Deuterium untersucht; Deuterium enthält ein Neutron im Kern, Wasserstoff nicht, wodurch Deuterium Emissionslinien mit kürzerer Wellenlänge als Wasserstoff für die gleichen $n_i$-Übergänge hat. Der Unterschied der Wellenlängen wird als Isotopieaufspaltung bezeichnet.
 
 Die im optischen Wellenlängenbereich beobachtete Reihe an Übergängen des Wasserstoffatoms mit $n_f=2$ und $n_i>2$ heißt Balmer-Serie. Sie besteht aus fünf Übergangslinien: $H_\alpha, H_\beta, H_\gamma, H_\delta$ und $H_\varepsilon$. 
 Weitere Hauptquantenzahlübergangsserien, die für Wasserstoff bei Anregung in verschiedenen Frequenzbereichen beobachtbar sind, sind in Abbildung (\ref{fig:anregungsserien_wasserstoff}) dargestellt. Sie werden nach $n_f$ gruppiert.
 
-\jafps{anregungsserien_wasserstoff}{Darstellung der Emissions- und Absorptionsspektrallinien von Wasserstoff für verschiedene Serien. Grafik entnommen aus }{0.5}%\cite[108]{Demtroeder3}}{0.5}
+\jafps{anregungsserien_wasserstoff}{Darstellung der Emissions- und Absorptionsspektrallinien von Wasserstoff für verschiedene Serien. Grafik entnommen aus\cite[108]{Demtroeder3}}{0.5}
 
 Für die zudem im Experiment verwendete Hg-Lampe sind die Spektrallinien gut bekannt. Sie sind für die erste Ordnung in Tabelle \ref{tab:hg_literatur} aufgelistet.
 
@@ -45,7 +45,7 @@ Für die zudem im Experiment verwendete Hg-Lampe sind die Spektrallinien gut bek
             & $671,643$ & $160$ \\
             & $690,752$ & $250$ \\ \hline
     \end{tabular}
-    \caption{Im optischen Bereich sichtbares Emissionsspektrum einer Quecksilber-Spektrallampe, wobei nicht alle Linien des Spektrums aufgeführt sind. Tabelle entnommen aus} %\cite[12]{Versuchsanleitung}.}
+    \caption{Im optischen Bereich sichtbares Emissionsspektrum einer Quecksilber-Spektrallampe, wobei nicht alle Linien des Spektrums aufgeführt sind. Tabelle entnommen aus \cite[12]{Versuchsanleitung}.}
     \label{tab:hg_literatur}
 \end{table}
 
@@ -59,11 +59,11 @@ Aufspaltung der emittierten Spektrallinien verwendeten Reflexionsgitters genau b
 und daraus die Gitterkonstante bestimmt. 
 
 
-\subsubsection{Experimenteller Aufbau \& Durchführung}
+\subsection{Experimenteller Aufbau \& Durchführung}
 
 Es wurde auf einer optischen Bank die Anordnung in Abbildung \ref{fig:aufbau_balmerserie} aufgebaut. Als Lampe wurde für die Messung der Gitterkonstanten die Hg-Lampe eingesetzt, zur Messung des Wasserstoffspektrums die Balmer-Lampe, welche ein Wasserstoff-Deuterium-Gemisch im Verhältnis $2:1$ enthielt. Die Linsen \textbf{f)} und \textbf{g)} bzw. \textbf{f)} und Kameralinse (\textbf{h)}) standen hierbei stets in Fernrohraufbau, ihr Abstand war die Summe ihrer Brennweiten. 
 
-\jafps{aufbau_balmerserie}{Versuchsaufbau zur Vermessung der Spektrallinien von Hg- und Wasserstoff-Deuterium-Lampen, mit a) Lampe, b) Linse (Brennweite $f=\SI{50}{\milli\meter}$) zur Abbildung des Lampenlichts auf den Spalt, c) verstellbarer Spalt, d) Objektivlinse zur Projektion ($f=\SI{150}{\milli\meter}$), e) Reflexionsgitter, f) Objektivlinse ($f=\SI{300}{\milli\meter}$) und g) Okularlinse mit Strichskala bzw. h) CCD-Kamera. Grafik entnommen aus }{0.8}%\cite[6]{Versuchsanleitung}}{0.8}
+\jafps{aufbau_balmerserie}{Versuchsaufbau zur Vermessung der Spektrallinien von Hg- und Wasserstoff-Deuterium-Lampen, mit a) Lampe, b) Linse (Brennweite $f=\SI{50}{\milli\meter}$) zur Abbildung des Lampenlichts auf den Spalt, c) verstellbarer Spalt, d) Objektivlinse zur Projektion ($f=\SI{150}{\milli\meter}$), e) Reflexionsgitter, f) Objektivlinse ($f=\SI{300}{\milli\meter}$) und g) Okularlinse mit Strichskala bzw. h) CCD-Kamera. Grafik entnommen aus\cite[6]{Versuchsanleitung}}{0.8}
 
 Das Projektionsobjektiv wurde in seinem Brennweitenabstand hinter dem Spalt eingesetzt, sodass bei genau paralleler Ausrichtung des Gitters (Zeigerwinkel $\omega_G=0^\circ$) zum Spalt das Bild des Spalts scharf auf diesen abgebildet wurde. Diese Autokollimation stellte sicher, dass die verschiedenen Wellenlängen des Lichts genau parallel auf das Gitter fielen. Die optischen Bänke wurden auf den Winkel $\omega_B=140^\circ$ zueinander gedreht, welcher für alle Messungen konstant blieb. Die Blende wurde so weit geschlossen, dass gerade genug Lichtintensität auf das Gitter fiel, um das Emissionsspektrum scharf erkennen zu können. Das Gitter wurde nun so gedreht, dass durch das Okular \textbf{g)} die Spektrallinien der Hg-Lampe nacheinander sichtbar wurden. Um die Abbildung scharf zu stellen, wurden, falls nötig, die Positionen der beiden Objektive \textbf{d)} und \textbf{f)} variiert. Für alle sichtbaren Spektrallinien der ersten Ordnung wurde nun der Gitterwinkel variiert, bis sie scharf im Zentrum der Okularskala zu erkennen waren und $\omega_G$ notiert. 
 
@@ -77,12 +77,12 @@ Um die Gitterkonstante $g$ des verwendeten Gitters zu bestimmen, wird die Gitter
 \end{align}
 Hier ist $d$ der Gangunterschied zwischen zwei benachbarten Strahlen in einem Maxima (siehe Abbildung \ref{fig:gittergleichung_gangunterschied}), $n$ bezeichnet die Ordnung, die hier i.d.R. als $n=1$ angenommen wird (andere Ordnungen sind mit dem verwendeten Gitter nur schlecht bis gar nicht beobachtbar). %und $\lambda$ die Wellenlänge des Lichts.
 
-\jafps{gittergleichung_gangunterschied}{Illustration des Gangunterschieds in einem Maxima des Interferenzmusters, das sich bei Reflexion von Licht an einem Reflexionsgitter ausbildet. Die Winkel $\alpha$ und $\beta$ entsprechen nicht den beiden gemessenen Winkeln $\omega_B$ und $\omega_G$, sondern müssen nach Gl. \ref{eq:winkel} noch umgerechnet werden. Graphik entnommen aus}{0.4} %\cite[1]{LDbalmerserie}.}{0.6}
+\jafps{gittergleichung_gangunterschied}{Illustration des Gangunterschieds in einem Maxima des Interferenzmusters, das sich bei Reflexion von Licht an einem Reflexionsgitter ausbildet. Die Winkel $\alpha$ und $\beta$ entsprechen nicht den beiden gemessenen Winkeln $\omega_B$ und $\omega_G$, sondern müssen nach Gl. \ref{eq:winkel} noch umgerechnet werden. Graphik entnommen aus\cite[1]{LDbalmerserie}.}{0.6}
 
 
 Die Winkelanordnung des konkreten genutzten Aufbaus ist in Abbildung \ref{fig:winkel_gitter} dargestellt.
 
-\jafps{winkel_gitter}{Winkelanordnung des Aufbaus. Graphik entnommen aus }{0.4}%\cite[8]{Versuchsanleitung}.}{0.5}
+\jafps{winkel_gitter}{Winkelanordnung des Aufbaus. Graphik entnommen aus \cite[8]{Versuchsanleitung}.}{0.5}
 
 Es gilt dabei: 
 \begin{align}\label{eq:winkel}
@@ -129,9 +129,9 @@ Aus der beiden Winkel $\omega_B$ und $\omega_G$ für jede Linie im Hg-Spektrum d
 %     \label{tab:hg_wert}
 % \end{table}
 
-Die beobachteten Linien im Lampenspektrum, die nicht einer der in Tabelle \ref{tab:hg_literatur} gelisteten Wellenlängen zugeordnet werden konnten, sind vermutlich durch Verunreinigungen mit anderen Gasen im Lampe zu erklären sowie die Tatsache, dass Hg-Spektrallampen i.d.R. eine kleine Menge Startergas enthalten, um die Verdampfung von Quecksilber effektiv zu ermöglichen. Typische Startergase sind Halogene wie Argon oder Xenon %\cite{mercurylamp}. 
-Im Vergleich mit den Emissionsspektren mehrerer typischer Halogene wurden die übrigen beobachteten Spektrallinien wie folgt zugeordnet:
-\textcolor{blue}{to do: mit Xenon \& Neon vgl, zuordnen}
+Die beobachteten Linien im Lampenspektrum, die nicht einer der in Tabelle \ref{tab:hg_literatur} gelisteten Wellenlängen zugeordnet werden konnten, sind vermutlich durch Verunreinigungen mit anderen Gasen im Lampe zu erklären sowie die Tatsache, dass Hg-Spektrallampen i.d.R. eine kleine Menge Startergas enthalten, um die Verdampfung von Quecksilber effektiv zu ermöglichen. Typische Startergase sind Halogene wie Argon oder Xenon \cite{mercurylamp}. 
+Der Vergleich mit den Emissionsspektren mehrerer typischer Halogene zeigt, dass z.B. Xenon im Wellenlängenbereich von etwa $\SIrange{490}{550}{\nano\meter}$ zahlreiche deutliche Emissionslinien aufweist \cite{xenonlines}. 
+Die weiteren Linien im Spektrum sind also sehr wahrscheinlich durch Startergase und kleinere Verunreinigungen, die bei längerer Gebrauchszeit von Spektrallampen entstehen können, zu erklären.
 
 
 Für die für Quecksilber zugeordneten Linien des beobachteten Linienspektrums wurden die zugeordneten Wellenlängen gegen die abgelesenen Winkel mithilfe der Beziehungen zu Einfalls- und Reflexionswinkel $\alpha$ und $\beta$ in Gl. \ref{eq:winkel} als $\sin(\alpha)+\sin(\beta)$ aufgetragen und eine Gerade der Form $\lambda = a \cdot (\sin(\alpha)+\sin(\beta))$ mithilfe der Methode der kleinsten Quadrate angepasst. Da der zu berechnende Zusammenhang der Gittergleichung \ref{eq:gittergl} keinen y-Achsenabschnitt aufweist, da eine Wellenlänge von $\lambda = \SI{0}{\nano \meter}$ physikalisch nicht sinnvoll betrachtet werden kann, wurde auch bei der Anpassung auf diesen verzichtet. Das Ergebnis ist in Abbildung \ref{fig:gitterkonstante} dargestellt. 
@@ -140,29 +140,34 @@ Für die für Quecksilber zugeordneten Linien des beobachteten Linienspektrums w
 
 Als Steigung der Anpassungsgerade ergibt sich als Wert für die Gitterkonstante $g_{\text{fit}}=\SI{489(5)}{\nano\meter}$. Der Wert für $g$ wird zusätzlich auch noch direkt über die Gittergleichung für jede zugeordnete Spektrallinie als $g=\frac{\lambda_{\text{lit,Hg,i}}}{(\sin(\alpha)+\sin(\beta))}$ einzeln berechnet, siehe Tabelle \ref{tab:g_einzeln}
 
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|} \hline
-     $\lambda_\text{lit,Hg}~/~\unit{nm}$  & $g ~/~ \unit{nm}$ \\ \hline
-        $404,656$ &  $466\pm6$ \\
-        $407,783$ & $470\pm6$ \\
-        $410,805$ & $469\pm6$ \\
-        $433,922$ & $477\pm 6$ \\
-        $434,749$ & $477\pm6$ \\
-        $435,833$ & $478\pm 6$ \\
-        $491,607$ & $495\pm 5$ \\
-        $546,074$ & $505\pm5$ \\
-        $576,960$ & $508\pm5$ \\
-        $579,066$ & $507\pm4$ \\ \hline
-    \end{tabular}
-    \caption{Einzeln berechnete Gitterkonstanten der zugeordneten Hg-Spektrallinien mit Winkeln aus Tabelle \ref{tab:hg_wert} mit Gittergleichung.}
-    \label{tab:g_einzeln}
-\end{table}
+% \begin{table}[H]
+%     \centering
+%     \begin{tabular}{|c|c|} \hline
+%      $\lambda_\text{lit,Hg}~/~\unit{nm}$  & $g ~/~ \unit{nm}$ \\ \hline
+%         $404,656$ &  $466\pm6$ \\
+%         $407,783$ & $470\pm6$ \\
+%         $410,805$ & $469\pm6$ \\
+%         $433,922$ & $477\pm 6$ \\
+%         $434,749$ & $477\pm6$ \\
+%         $435,833$ & $478\pm 6$ \\
+%         $491,607$ & $495\pm 5$ \\
+%         $546,074$ & $505\pm5$ \\
+%         $576,960$ & $508\pm5$ \\
+%         $579,066$ & $507\pm4$ \\ \hline
+%     \end{tabular}
+%     \caption{Einzeln berechnete Gitterkonstanten der zugeordneten Hg-Spektrallinien mit Winkeln aus Tabelle \ref{tab:hg_wert} mit Gittergleichung.}
+%     \label{tab:g_einzeln}
+% \end{table}
 
 Der arithmetische Mittelwert der 10 zugeordneten Spektrallinien berechnet sich dann als $\bar{g}=\SI{485.3(1.9)}{\nano \meter}$. Dabei stimmen innerhalb der $1\sigma$-Umgebung der Fehler $\bar{g}$ und $g_{\text{fit}}$ miteinander überein. Es wird im Folgenden daher $g=\SI{489(5)}{\nano \meter}$ genutzt, da hier auch $\bar{g}$ einbegriffen ist.
 
-Ein wichtiges Charakteristika eines Reflexionsgitters ist neben der Gitterkonstanten 
-das Auflösungsvermögen $\mathcal{R}$. Es berechnet sich nach dem Rayleigh-Kriterium für eine gegebene Wellenlänge als Verhältnis $\frac{\lambda}{\Delta \lambda}$, wobei $\Delta\lambda$ das minimale Intervall zwischen zwei noch als zwei getrennt erkennbare Linien darstellt %\cite[362]{Demtroeder3}. 
+Der bestimmte Wert der Gitterkonstanten $g$ des Reflexionsgitters bewegt sich im Bereich typischer Gitterkonstanten \cite[261]{Demtroeder3} 
+und ist damit plausibel. Sein Fehler ist relativ groß, da die Unsicherheit des Winkels relativ groß ist. Durch eine genauere Winkelskala könnte dieser systematische Fehler verringert werden.
+
+\subsubsection{Auflösungsvermögen des Gitters}
+Ein wichtiges Charakteristikum eines Reflexionsgitters ist neben der Gitterkonstanten 
+das \\ Auflösungsvermögen 
+$\mathcal{R}$. Es berechnet sich nach dem Rayleigh-Kriterium für eine gegebene Wellenlänge als Verhältnis $\frac{\lambda}{\Delta \lambda}$, wobei $\Delta\lambda$ das minimale Intervall zwischen zwei noch als zwei getrennt erkennbare Linien darstellt \cite[362]{Demtroeder3}. 
 Weiter gilt für Reflexionsgitter $\frac{\lambda}{\Delta \lambda}=nN$, mit $n$ als Ordnung und $N$ der Anzahl der ausgeleuchteten Gitterspalte, also $N=\frac{x}{g}$ wobei $x$ die ausgeleuchtete Breite des Gitters ist. Bei den durchgeführten Messungen wurde immer etwa $x=\SI{1.5(0.5)}{\centi\meter}$ des Gitters von der Hg-Lampe ausgeleuchtet. Daraus berechnet sich für alle betrachteten Spektrallinien ein Auflösungsvermögen von 
 \begin{align} 
     \label{eq:aufloesung}
@@ -171,30 +176,223 @@ Weiter gilt für Reflexionsgitter $\frac{\lambda}{\Delta \lambda}=nN$, mit $n$ a
 Bei der als $\SI{435.833}{\nano\meter}$ zugeordneten blauen Linie, die stark beobachtet werden konnte, errechnet sich so ein minimales Wellenlängenintervall von $\Delta \lambda_{\text{blau}}= \SI{14.2081(0.005)}{\pico \meter}$. Da die verschiedenen Spektrallinien von Quecksilber im blauen Bereich tatsächlich nur wenige $\unit{nm}$ auseinander liegen, aber als deutlich distinkte Linien zu erkennen waren, ist dieser Wert für $\mathcal{R}$ plausibel.
 
 
+\subsection{Teil 2: Vermessung der Balmer-Serie} \label{sec:messung_balmer}
 
-
-%auflösungsvermögen diskussion goes here
-
-\subsection{Teil 2: Vermessung der Balmer-Serie}
-
-Um die Wellenlängen der Balmer-Serie zu vermessen, wurde die Hg-Lampe durch die Balmer-Lampe ausgetauscht und der Aufbau erneut so justiert, dass das Licht scharf abgebildet wurde. Durch Variation des Gitterwinkels $w_G$ wurden auch hier alle sichtbaren Spektrallinien des Wasserstoffs der Lampe auf die Mitte der Okularskala ausgerichtet und $w_G$ notiert, sowie der Abstand zur deutlich schwächer (aufgrund der niedrigeren Konzentration im Gasgemisch der Lampe) aber um einen kleinen Abstand $d$ getrennten zu sehenden korrespondierenden Spektrallinie des Deuteriums. Nicht aufgespalten erscheinende Spektrallinien wurden ebenfalls vermessen. Anschließend wurde das Okular durch die CCD-Kamera ausgetauscht und die erkennbar aufgespaltenen Wasserstoff-Linien nacheinander in die Mitte der CCD-Zeile der Kamera fokussiert.
+Um die Wellenlängen der Balmer-Serie zu vermessen, wurde die Hg-Lampe durch die Balmer-Lampe ausgetauscht und der Aufbau erneut so justiert, dass das Licht scharf abgebildet wurde. Durch Variation des Gitterwinkels $w_G$ wurden auch hier alle sichtbaren Spektrallinien des Wasserstoffs der Lampe auf die Mitte der Okularskala ausgerichtet und $w_G$ notiert, sowie der Abstand zur deutlich schwächer (aufgrund der niedrigeren Konzentration im Gasgemisch der Lampe) aber um einen kleinen Abstand $d$ getrennten zu sehenden korrespondierenden Spektrallinie des Deuteriums. Man beachte, dass nicht alle als aufgespalten beobachtete Linien tatsächlich zur Wasserstoff-Deuterium-Isotopieaufspaltung gehören, näheres dazu ist in der Diskussion der Beobachtungen erläutert. Nicht aufgespalten erscheinende Spektrallinien wurden ebenfalls vermessen. Anschließend wurde das Okular durch die CCD-Kamera ausgetauscht und die erkennbar aufgespaltenen Wasserstoff-Linien nacheinander in die Mitte der CCD-Zeile der Kamera fokussiert.
 Die Kamera wurde dabei mit dem Aufnahmeprogramm \textit{VideoCom-Intensitäten} auf einem Computer verbunden, welches die Lichtintensitäten für die einzelnen Pixel aufzeichnete, mit einer Aufnahme über einen längeren Zeitraum und automatischer Mittelwertbildung der gemessenen Intensitäten. Die Messungen der einzelnen Spektrallinien-Paare wurden als Textdateien gespeichert. 
 
+
+\subsubsection{Messung mit dem Okular}
+
+Für alle in der ersten Ordnung sichtbaren Spektrallinien im Aufbau mit Okular sind die gemessenen Winkel $\omega_B$ und $\omega_G$ zusammen mit der Farbe der Spektrallinien in Tabelle \ref{tab:h_winkel} dargestellt. Wo möglich wurden die Linien der passenden Linie der Balmer-Serie von Wasserstoff zugeordnet.
+
+% \begin{table}[H]
+%     \centering
+%     \begin{tabular}{|c|c|c|c|c|} \hline
+%          $\omega_B/^\circ $ & $\omega_G /^\circ$ & Farbe & $d ~/$ ~Skt. & Balmer-Linie \\ \hline
+%          $140,0\pm 0,5$ & $78,5\pm0,5$ & rot & $2,0\pm1,0$ & $H_\alpha$\\
+%          $140,0\pm 0,5$ & $73,5\pm0,5$ &  & $0,5\pm1,0$ & -\\
+%          $140,0\pm 0,5$ & $65,5\pm0,5$ & grün & - & -\\
+%          $140,0\pm 0,5$ & $64,0\pm0,5$ & & - & - \\
+%          $140,0\pm 0,5$ & $61,0\pm 0,5$ & & - & - \\
+%          $140,0\pm 0,5$ & $60,6\pm0,5$ & &-&- \\
+%          $140,0\pm 0,5$ & $59,5\pm0,5$ & türkis & $1,5\pm1,0$ & $H_\beta$\\
+%          $140,0\pm 0,5$ & $55,0\pm0,5$ & blau & $0,5\pm1,0$ & - \\
+%          $140,0\pm 0,5$ & $55,5\pm0,5$ & & $0,5\pm1,0$ & $H_\gamma$\\ \hline
+%     \end{tabular}
+%     \caption{Mit Okular \textbf{g)} beobachtete Spektrallinien der Wasserstoff-Deuterium-Lampe mit zugeordneten Winkeln. Für die Wellenlängen, die als aufgespalten erkannt wurden, ist auch der Abstand zur Linie  mit der schwächeren Intensität $d$ in Skalenteilen (Skt.) dargestellt. Auf der Skala des Okulars entspricht ein $1$ Skt. $\SI{0.1}{\milli \meter}$. Man beachte, dass die türkise Linie des Spektrums zweimal vermessen wurde, jeweils mit genau den gleichen Winkeln und Abständen und deswegen hier nur einmal gelistet ist.}
+%     \label{tab:h_winkel}
+% \end{table}
+
+Im Bereich der grünen Linien wurden zudem noch sehr schwache Linien beobachtet, die aber nicht sinnvoll fokussiert und vermessen werden konnten.
+Die abgelesenen Winkel werden für die weitere Berechnung wieder jeweils mit Gl. \ref{eq:winkel} zu Einfalls- und Ausfallswinkel $\alpha$ und $\beta$ umgerechnet.
+Die zusätzlichen Linien im Spektrum der Balmer-Lampe, die nicht einer der Wasserstoff-Linien zugeordnet werden konnten, sind vermutlich durch Emissionslinien von (atomarem) Sauerstoff zu erklären, da die Balmer-Lampe mit (deuterierten und normalen) Wasserdampf gefüllt ist, welcher durch angelegte Wechselspannungen in Sauerstoff und Wasserstoff aufgespalten wird. Hierbei ist Sauerstoff im Verhältnis weniger vorhanden und sollte daher nur als weniger stark sichtbare Spektrallinien sichtbar sein. Auch die Anwesenheit von halogenen Startergasen wie Argon oder Neon im Gasgemisch der Spektrallampe ist wie im ersten Versuchsteil sehr wahrscheinlich. Alle diese Elemente haben gut sichtbare Spektrallinien im sichtbaren optischen Bereich. So kann auch erklärt werden, wieso die zweite rote Spektrallinie als aufgespalten beobachtet wurde: Mit der Gittergleichung \ref{eq:gittergl} ergibt sich eine Wellenlänge von $\lambda_{\text{rot,2}}=\SI{584(8)}{\nano\meter}$. Im Spektrum von Neon gibt es mehrere gut sichtbare, eng aneinander liegende Emissionslinien zwischen $\SI{582.026}{\nano\meter}$ und $\SI{590.246}{\nano\meter}$\cite{neonlines}. 
+Im Rahmen des Fehlers der Messung könnten alle diese Linien die beobachteten zwei Spektrallinien sein. Hier liegt also keine Isotopieaufspaltung vor, sondern tatsächlich verschiedene Emissionslinien, die nur nah einander liegen. Die Auflösung des Gitters ist hierbei nicht der limitierende Faktor, sondern die endliche Linienbreite der einzelnen Linien sowie die Auflösungsvermögen der genutzten Linsen, die als optische Elemente auch endliche $\mathcal{R}$-Werte haben.
+Damit erscheint plausibel, dass die weiteren, nicht der Wasserstoff-Balmer-Serie zuordenbaren Linien im Spektrum zu zusätzlichen Elementen in der Lampe gehören und im Weiteren nicht beachtet werden müssen.
+
+Die Balmer-Serie von Wasserstoff hat die folgenden Literaturwerte der Wellenlängen sowie die über Gl. \ref{eq:gittergl} berechneten Wellenlängen: 
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|} \hline
+        Linie &  $\lambda_{\text{lit}}/\unit{nm}$ & $\lambda_\text{mess}/\unit{nm}$ \\ \hline
+        $H_\alpha$ & $656,280$ & $\num{619(8)}$\\
+        $H_\beta$ & $486,132$ & $\num{478(7)}$\\
+        $H_\gamma$ & $430,046$ & $\num{445(7)}$\\
+        $H_\delta$ & $410,173$ & nicht gemessen\\
+        $H_\varepsilon$ & $397.007$ & nicht gemessen \\ \hline
+    \end{tabular}
+    \caption{Wellenlängen der Balmer-Serie von Wasserstoff. Im Experiment wurden nur $H_\alpha$, $H_\beta$ und $H_\gamma$ beobachtet. Daten aus REF \cite{NISTbalmer}}
+    \label{tab:balmer_wellenlaengen}
+\end{table}
+
+Es wird nun die Isotopieaufspaltung der Spektrallinien von Wasserstoff und Deuterium untersucht. Die Isotopieaufspaltung ist durch die Gittergleichung Gl. \ref{eq:gittergl} gegeben als:
+\begin{align} \label{eq:isotopie}
+\Delta \lambda = \frac{\partial \lambda}{\partial \beta} \Delta \beta = g \cos(\beta) \Delta \beta 
+\end{align}
+Mit Kleinwinkelnäherung und geometrischer Betrachtung ist hier $\Delta \beta = \frac{d}{f}$, mit\\ $f=\SI{300}{\milli \meter}$ aus der Brennweite des Objektivs und $d$ der Abstand der beiden aufgespaltenen Linien. \\
+Für die beobachteten Balmer-Serien-Linien werden die Isotopieaufspaltungen so nach Gl. \ref{eq:isotopie} berechnet (Tabelle \ref{tab:isotopie_okular}). 
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|} \hline
+        Linie &  d / Skt. & $\Delta \lambda / \unit{nm}$ \\ \hline
+        $H_\alpha$ & $\num{2.0(1,0)}$ & $\num{3(1)e-1}$ \\
+        $H_\beta$ & $\num{1.5(1,0)}$ & $\num{2(2)e-1}$\\
+        $H_\gamma$ & $\num{0,5(1,0)}$ & $\num{1(2)e-1}$ \\ \hline
+    \end{tabular}
+    \caption{Berechnete Isotopieaufspaltung der beobachteten Linien der Balmer-Serie für die Messung mit Okular.}
+    \label{tab:isotopie_okular}
+\end{table}
+
+Die so berechneten Aufspaltungen durch die Isotopie der drei beobachteten Balmer-Linien stimmen im Rahmen der Fehler miteinander überein. Das ist sinnvoll, da die Wellenlängenunterschiede der Spektrallinien über die Rydberg-Formel Gl. \ref{eq:lambda_übergang} sich mit jeweiliger Rydbergkonstante nach Gl. \ref{eq:rydbergkonst} für Wasserstoff und Deuterium zueinander nicht abhängig von der Wellenlänge, sondern dem Unterschied der reduzierten Massen sind. Die relativ zum Wert sehr großen Fehler folgen mit Gaußscher Fehlerfortpflanzung aus dem großen Ablesefehler der Entfernung der Linien $d$ auf der Okularskala. Um diesen Ablesefehler zu vermeiden, wurde die Vermessung der drei aufgespaltenen Linien der Balmer-Serie, die beobachtet werden konnten, auch noch mit einer CCD-Kamera durchgeführt. Eine weitere Schwierigkeit dieser Messmethode mit einem Okular und dem Auge zeigt sich darin, dass die vierte und fünfte Balmer-Linie ($H_\delta$ und $H_\varepsilon$) gar nicht beobachtet werden konnten: Linien mit geringeren Intensitäten und Wellenlängen am Rande des optisch sichtbaren Spektrums können nur schwer oder überhaupt gar nicht gefunden und sind daher auch nur schwer bis nicht präzise vermessbar. Eine objektive Messung von Lichtintensitäten, insbesondere auch mit Möglichkeit der Intensitätsmittelung über einen längeren Belichtungszeitraum als beim menschlichen Auge, wie es eine CCD-Kamera mit Aufnahmesoftware ermöglicht, ist hier sinnvoll. Auch der Einfluss des spezifischen Auges, welches die Linien betrachtet, ist nicht zu unterschätzen, besonders bei individuellen Sehfehlern wie Astigmatismus kann es zu zusätzlichen Fehlern kommen. Im Vergleich mit den Literaturwerten zeigt sich die gemessenen Balmer-Linien eine Abweichung von (jeweils mit Beachtung der $1\sigma$-Umgebung $-(4,4-6,9)\%$ für $H_\alpha$, $-(0,2-3,1)\%$ für $H_\beta$ und $(1,8-5,1)\%$ für $H_\gamma$. Diese kleinen Abweichungen zeigen, dass sich mit der Methode trotz der Fehleranfälligkeit durch die Betrachtung mit einem individuellen Auge relativ zuverlässig die Wellenlängen der stark ausgeprägten Balmer-Linien bestimmen lassen. Für eine sehr genaue Betrachtung der Isotopieaufspaltung ist die Methode jedoch dann zu ungenau.
+
+\subsubsection{Messung mit CCD-Kamera}
+
+Die drei aufgespaltenen Balmer-Linien wurden mit der CCD-Kamera wie in Abschnitt \ref{sec:messung_balmer} aufgenommen. Um die Pixelkoordinaten $p$ der CCD-Kamera in den Textdateien mit den Messdaten in Winkel umzurechnen, wurde die folgende Formel genutzt \cite[9]{Versuchsanleitung}:
+\begin{align}\label{eq:pixel_beta}
+\beta = \arctan \left( \frac{(1024-p)\cdot \SI{0,014}{\milli \meter}}{f} \right)
+\end{align}
+Für den Einfallswinkel wurde für alle Messungen erneut $\alpha = \omega_B = \SI{140,0(0,5)}{\degree}$ gemessen. Auch hier ist $f=\SI{300}{\milli \meter}$ die Brennweite des Objektives. 
+
+Im Abbildungen \ref{fig:balmer_rot} - \ref{fig:balmer_blau} sind die drei Balmer-Linien als relative Intensität (zur maximalen Intensität, die die Kamera messen kann) abhängig von der Pixelkoordinate $p$ (ohne Einheit) als x-Achse dargestellt. Auch hier wurde die türkise $H_\beta$-Linie zweimal vermessen, es sind beide Messungen dargestellt, da sie sich tatsächlich geringfügig unterscheiden. Darin zeigt sich bereits die erhöhte Genauigkeit dieser Messmethode.
+
+\jafpp{balmer_rot}{CCD-Messung der $\text{H}_\alpha$-}{balmer_turkis}{$\text{H}_\beta$-Linien}
+\jafpp{balmer_turkis2}{Erneute Messung der $\text{H}_\beta$-Linie}{balmer_blau}{Messung der $\text{H}_\gamma$ Linie}
+\
+
+An die gemessenen Intensitätsverteilungen wurde eine Funktion der Form
+
+\begin{align}
+    f(x) = A_D \cdot \exp{\frac{-(x - \mu_D)^2}{\sigma_D^2}} + A_H \cdot \exp{\frac{-(x - \mu_H)^2}{\sigma_H^2}}
+\end{align}
+
+mittels einer Methode der kleinsten Quadrate angepasst. Die gefundenen Parameter sind in Tabelle \ref{tab:gauss_params} aufgeführt.
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|c|c|} \hline
+        Messung & $\mu_H$ & $\mu_D$ & $\sigma_H$ & $\sigma_D$\\ \hline
+        \ref{fig:balmer_rot} & $\num{1.08159(0.00003)e3}$ & $\num{1.0706(0.0002)e3}$ & $\num{2.17(0.03)e0}$ & $\num{1.9(0.2)e0}$\\
+        \ref{fig:balmer_turkis} & $\num{1.0757(0.0002)e3}$ & $\num{1.0601(0.0003)e3}$ & $\num{8.1(0.1)e0}$ & $\num{5.8(0.2)e0}$\\
+        \ref{fig:balmer_turkis2} & $\num{1.0757(0.0002)e3}$ & $\num{1.0601(0.0003)e3}$ & $\num{8.1(0.1)e0}$ & $\num{5.8(0.2)e0}$\\
+        \ref{fig:balmer_blau} & $\num{6.7694(0.0002)e2}$ & $\num{6.704(0.001)e2}$ & $\num{2.53(0.02)e0}$ & $\num{1.7(0.1)e0}$\\ \hline
+    \end{tabular}
+    \caption{Angepasste Parameter für doppelte Gausskurven nach CCD-Messung}
+    \label{tab:gauss_params}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|c|c|} \hline
+        Messung & $A_H$ & $A_D$ \\ \hline
+        \ref{fig:balmer_rot} & $\num{7.9(0.1)e1}$ & $\num{1.1(0.1)e1}$\\
+        \ref{fig:balmer_turkis} & $\num{1.16(0.01)e1}$ & $\num{5.6(0.2)e0}$\\
+        \ref{fig:balmer_turkis2}  & $\num{1.16(0.01)e1}$ & $\num{5.6(0.2)e0}$\\
+        \ref{fig:balmer_blau}  & $\num{7.87(0.04)e0}$ & $\num{1.06(0.05)e0}$\\ \hline
+    \end{tabular}
+    \caption{Angepasste aber nicht relevante Parameter für doppelte Gausskurven nach CCD Messung}
+    \label{tab:gauss_params2}
+\end{table}
+
+Jetzt wird $\Delta \lambda$ aus den Anpassungsparametern der Gausskurven berechnet. Hierbei wird nach Gleichung \eqref{eq:isotopie} vorgegangen, wobei $d = \SI{0.014}{\milli\meter} \cdot (\mu_H - \mu_D)$ ist. Die hiermit berechneten Isotopieaufspaltungen sind in Tabelle \ref{tab:ccd_split} aufgeführt.
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|} \hline
+        Messung & Linie & $\Delta\lambda / \unit{\nano\meter} $ \\ \hline
+        \ref{fig:balmer_rot} & $\text{H}_\alpha$ & $\num{0.196(4)}$\\
+        \ref{fig:balmer_turkis} & $\text{H}_\beta$ & $\num{0.334(8)}$\\
+        \ref{fig:balmer_turkis2} & $\text{H}_\beta$  & $\num{0.334(8)}$\\
+        \ref{fig:balmer_blau} & $\text{H}_\gamma$  & $\num{0.144(3)}$\\ \hline
+    \end{tabular}
+    \caption{Isotopieaufspaltung aus CCD-Messung}
+    \label{tab:ccd_split}
+\end{table}
+
+Diese Isotopieaufspaltungen liegen innerhalb einer $1\sigma$ Umgebung der zuvor mit dem Auge berechneten, passen also gut zusammen, es sind jedoch die Fehler deutlich kleiner. Die Methode mit CCD-Kamera ist also wie vermutet genauer darin, gute Aussagen über die Isotopieaufspaltung von Wasserstoff treffen zu können.
+
+\subsubsection{Plancksches Wirkungsquantum und Rydbergkonstante}
+
+Aus den Wellenlängen der Balmer-Linien (Tabelle \ref{tab:balmer_wellenlaengen}) wird nun die Rydbergkonstante und aus dieser wiederum das plancksche Wirkungsquantum berechnet.
+Aus Gl. \ref{eq:lambda_übergang} und \ref{eq:rydbergkonst} folgt mit der Notation $u = \bigg(\frac{1}{2^2} - \frac{1}{n^2}\bigg)$:
+\begin{align}
+    R_H &= \frac{1}{\lambda u}\\
+    \ergo R_\infty &= \frac{R_H m_e}{\mu_H} 
+    \label{eq:R_from_balmer}
+\end{align}
+
+Außerdem ist nach \cite{KonstantenNIST}
+\begin{align}
+    R_\infty &= \frac{m_e e^4}{8 \epsilon_0^2 h^3 c}\\
+    \imply h &= \bigg( \frac{m_e e^4}{8 \epsilon_0^2 R_\infty c} \bigg)^\frac{1}{3} \label{eq:h_from_R}
+\end{align}
+
+Damit werden nun $R_\infty$ und $h$ für jede der Linien einzeln berechnet als:
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|} \hline
+        Linie & $ R_\infty / m^{-1} $ & $h / Js$\\ \hline
+        $\text{H}_\alpha$ & $\num{ 116(1)e5}$ & $\num{6.50(3)e-34}$\\
+        $\text{H}_\beta$ & $\num{112(2)e5}$ & $\num{6.59(3)e-34}$\\
+        $\text{H}_\beta$  & $\num{112(2)e5}$ & $\num{6.59(3)e-34}$\\
+        $\text{H}_\gamma$  & $\num{107(2)e5}$ & $\num{6.68(3)e-34}$\\ \hline
+    \end{tabular}
+    \caption{R und h}
+    \label{tab:R_h}
+\end{table}
+
+Im Mittel ergeben sich somit $R_\infty = \SI{1.12(0.01)e7}{\per\meter}$ und $h = \SI{6.59(0.02)e-34}{\joule\second}$.
+
+Im Vergleich mit den Literaturwerten für $R_\infty = \SI{10973731.568157(12)}{\meter^-1}$ %
+und $h = \SI{6.62607015e-34}{\joule \second}$ \cite{KonstantenNIST} 
+kann man sehen, dass die berechneten Werte nicht zu den Literaturwerten passen, jedoch nur um wenige Prozent abweichen. Das berechnete plancksche Wirkungsquantum passt (innerhalb einer $1\sigma$-Umgebung) zu dem im ersten Versuchsteil ermittelten. Der bestimmte Wert der Rydbergkonstante $R_\infty$ aus den gemessenen Balmerlinien hat einen deutlich größeren Fehler als der Literaturwert, die genutzte Methode ist also deutlich ungenauer als andere genutzte Methoden zur Bestimmung dieser Konstanten. Allerdings ist die hier genutzte Methode über die Balmer-Linien in der Durchführung einfach und liefert trotzdem ein Ergebnis, was sehr nah am bisher besten Literaturwert für $R_\infty$ ist.
+
+
+
+\subsection{Weiterführende Überlegungen}
 % placeholder
 
-% \subsection{Messung mit dem Auge}
-% placeholder
-\subsection{Messung mit CCD-Kamera}
-
-\jafpp{balmer_rot}{CCD Messung der $\text{H}_\alpha$}{balmer_turkis}{$\text{H}_\beta$ Linie}
-\jafpp{balmer_turkis2}{Erneute Messung der $\text{H}_\beta$}{balmer_blau}{$\text{H}_\gamma$ Linie}
-
-% placeholder
-% \subsection{Vermessung der Isotopie-Aufspaltung}
-% placeholder
-% %theorie isotopie erst hier? 
-
-% \subsection{Weiterführende Überlegungen}
-% placeholder
 % %linienverbreiterungen 
-% %verunreinigungen balmer-lampe zuordnen
+Die gemessene Linienbreite wird mit $\text{FWHM} = \sigma \sqrt{8 \ln{2}}$ \cite[8]{ex_techniques} aus den Anpassungsparametern berechnet.
+
+Diese Breite ist in Pixel, anschließend wird also die Linienbreite als Wellenlänge berechnet als
+\begin{align}
+    \Delta \beta &= \text{FWHM} \cdot \SI{0.014}{\milli\meter} / f\nonumber\\
+    \Delta \lambda &= \Delta \beta \cdot g \cdot \cos{\beta} \label{eq:mesured_lw}
+\end{align}
+
+Die so ermittelten Linienbreiten sind
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|c|} \hline
+        Messung & Linie & $\delta\lambda_H / \unit{\nano\meter} $ & $\delta\lambda_D / \unit{\nano\meter}$\\ \hline
+        \ref{fig:balmer_rot} & $\text{H}_\alpha$ & $\num{ 6.5(0.1)e-1}$ & $\num{ 6(1)e-1}$\\
+        \ref{fig:balmer_turkis} & $\text{H}_\beta$ & $\num{ 2.9(0.1)e0}$ & $\num{2.1(0.1)e0}$\\
+        \ref{fig:balmer_turkis2} & $\text{H}_\beta$ & $\num{ 2.9(0.1)e0}$ & $\num{2.1(0.1)e0}$\\
+        \ref{fig:balmer_blau} & $\text{H}_\gamma$ & $\num{ 6 9.4(0.1)e-1}$ & $\num{ 6.4(0.4)e-1}$ \\\hline
+    \end{tabular}
+    \caption{Linienbreite aus CCD-Messung}
+    \label{tab:linewidth}
+\end{table}
+
+Es fällt zunächst die stark variierende Linienbreite auf, welche auf einen Fehler in dem Messaufbau, welcher die Schärfe reduziert hindeutet.
+
+Die natürliche Linienbreite von Spektrallinien $\delta \nu$ ergibt sich aus der endlichen Lebensdauer $\tau$ von angeregten Zuständen als \cite{laserspektroskopie}
+\begin{align}
+    \label{eq:nat_linien}
+    \delta \nu = \frac{1}{2\pi \tau}
+\end{align}
+
+Die Lebensdauer ist definiert als die Zeit, bis von einer Anfangspopulation die Anzahl der angeregten Zustände nur noch $1/e$ der Anfangspopulation vorhanden sind.  Es ist zu beachten, dass statt $\frac{1}{\tau}$ hier bei einem Übergang eines höheren Energiezustandes in einen niedrigeren, der nicht der Grundzustand ist (wie hier mit $n$ als höheren Zustand zu $m=2$ für die Balmer-Serie) die Differenz $\frac{1}{\tau_m}-\frac{1}{n}$ betrachtet werden muss.
+Für die Balmer-Linien wurden als $m$ zugeordnet: $H_\alpha:m=3~, H_\beta:m=4$ und $H_\gamma: m=5$.
+
+Außerdem wird die Linienbreite noch durch die Dopplerverschiebung durch die Maxwellsche Geschwindigkeitsverteilung der sich bewegenden Gasatome in der Balmer-Lampe zusätzlich verbreitert. Diese Verbreiterung berechnet sich zu \cite[230]{Demtroeder3}
+
+\begin{align}
+    \delta\nu\text{Doppler} = \frac{2 \nu_0}{c} \sqrt{(2 R T/M) \ln(2)}
+\end{align}
+
+Die hiermit berechneten Linienbreiten sind in der Größenordnung $\SI{1e-2}{\nano\meter}$ und somit erheblich kleiner als die beobachteten. Dies spricht weiterhin dafür, dass die Linienschärfe mehr durch den Aufbau als durch physikalische Faktoren limitiert war.
