--- a/402-quantenlung-von-energie/latex/references.bib
+++ b/402-quantenlung-von-energie/latex/references.bib
@@ -86,3 +86,46 @@ publisher = {Springer},
     url = {https://zeiss-campus.magnet.fsu.edu/articles/lightsources/mercuryarc.html},
     date = {2025-11-10}
 }
+
+@book{ex_techniques,
+    title = {Experimental Techniques in Nuclear and Particle Physics},
+    doi = {10.1007/978-3-642-00829-0},
+    doiurl = {https://doi.org/10.1007/978-3-642-00829-0},
+    author = {Stefaan Tavernier},
+    publisher = {Springer},
+    year = {2022},
+}
+
+
+@online{neonlines,
+    url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/neontable2.htm},
+    title = {Strong Lines of Neon (Ne)},
+    organization = {NIST National Institute of Standards and Technology},
+    date = {2025-11-11}
+}
+
+
+@book{laserspektroskopie,
+author = {Demtröder, Wolfgang},
+edition = {4},
+publisher = {Springer},
+title = {Laserspektroskopie: Grundlagen und Techniken},
+year = {2000},
+doi = {10.1007/978-3-662-08266-9},
+doiurl = {https://doi.org/10.1007/978-3-662-08266-9},
+}
+
+
+@online{NISTbalmer,
+    title = {Atomic Spectroscopy},
+    organization = {NIST National Institute of Standards and Technology},
+    date = {2025-11-11},
+    url = {https://physics.nist.gov/Pubs/AtSpec/node18.html#b},
+}
+
+@online{xenonlines,
+    title = {Strong Lines of Xenon (Xe)},
+    organization = {NIST National Institute of Standards and Technology},
+    date = {2025-11-11},
+url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm},
+}
