--- a/402-quantenlung-von-energie/latex/2_photoeffekt.tex
+++ b/402-quantenlung-von-energie/latex/2_photoeffekt.tex
@@ -9,7 +9,7 @@ Ist die Energie der einzelnen Photonen kleiner als die Austrittsarbeit, welche b
 Dies ist der sogenannte äußere photoelektrischer Effekt (Photoeffekt).
 Im Folgenden wird der Photoeffekt in einer Photozelle aus elektrisch verbundener Kathode,
 die mit Licht bestrahlt wird mit Austrittsarbeit $W_K$, und Anode mit Austrittsarbeit $W_A$, an der der Photostrom gemessen wird, untersucht.
-Es wird zudem eine Gegenspannung angelegt, die der Bewegung der Elektronen entgegenwirkt, mit positiven Pol an der Anode. \textcolor{blue}{(double check: korrekte polung?)}\\
+Es wird zudem eine Gegenspannung angelegt, die der Bewegung der Elektronen entgegenwirkt, mit positiven Pol an der Anode.
 Bei der Gegenspannung $U_0$ (Grenzspannung), bei der gerade kein Photostrom mehr gemessen wird, d.h. keine Elektronen die Anode mehr erreichen, ergibt sich die Energiebilanz der Photoelektronen wie folgt:
 Wenn Kathode und Anode verbunden werden, entsteht aufgrund der nun gleich großen Fermienergien $E_{\text{FK}}=E{_\text{FA}}$  der Leitungselektronen der beiden Materialien ein Potentialunterschied, d.h. eine Kontaktspannung, welche ein Photoelektron überwinden muss:
 \begin{align}
@@ -25,7 +25,7 @@ Zusammen ergibt sich dann als Energiebilanz für den Fall der Grenzspannung:
 	 & \ergo h\nu = W_A + eU_0
 \end{align}
 
-%\jafps{energiebilanz_gegenspannung}{Energiediagramm der Photozelle bei angelegter Gegenspannung $U_0$ und Kontaktspannung $eU_{\text{KA}}$. Grafik entnommen aus \cite[11]{Versuchsanleitung}.}{0.5}
+\jafps{energiebilanz_gegenspannung}{Energiediagramm der Photozelle bei angelegter Gegenspannung $U_0$ und Kontaktspannung $eU_{\text{KA}}$. Grafik entnommen aus \cite[11]{Versuchsanleitung}.}{0.5}
 
 Es können also nur Austrittsarbeit der Anode $W_A$ und der Wert von $h$ aus dem funktionellen Zusammenhang zwischen Frequenz $\nu$ und Grenzspannung $U_0$ bestimmt werden, nicht die Austrittsarbeit der Kathode, deren Term sich in der Energiebilanz kürzt.
 
@@ -36,16 +36,14 @@ Im Abstand $f$ wurde die Photozelle platziert, die hier aus einer Kalium (K)-Kat
 (letzteres als Ringanode, damit möglichst kein Quellenlicht auf die Anode gelangt und dort ebenfalls Elektronen auslösen könnte), sodass das Licht scharf als Lichtfleck mit Durchmesser $(5-10)~\unit{\milli\meter}$ auf die Kathode fiel. 
 Zudem wurde noch ein Filterrad mit einstellbarer Durchlasswellenlänge vor der Photozelle platziert. Als Durchlasswellenlängen des Filterrads waren wählbar: $\lambda \in \{365, 405, 436, 546, 578\}~\unit{\nano\meter}$. Um Streulicht zu vermeiden, wurde noch ein Rohr vor die quellenseitige Öffnung der Photozelle und mit kleinem Abstand zum Filterrad aufgesetzt.
 
-
-%das hier kann wahrscheinlich noch bisschen schöner formuliert werden
 Es wurde der Anodenanschluss mit dem Netzgerät, welches Spannung der Stärke $(0-12)~\unit{\V}$ liefert, verbunden, sowie der Kathodenanschluss mit einem Messverstärker, welcher anschließend mit dem anderen Anschluss des Netzgeräts verbunden wurde.
 Der Messverstärker wurde im Experiment auf die Stufe $\SI{e-10}{\A}\rightarrow \SI{1}{\V}$ gestellt. 
 Außerdem wurden zwei Digital-Multimeter zur Messung des Gegenstroms $U_G$ und Photostroms $I$, letzteren mittels der gemessenen Spannung
 nach dem Messverstärker $U_I$, wie auf der Aufbauskizze in Abbildung \ref{fig:aufbau_photozelle} dargestellt, angeschlossen.
 
-%\jafps{aufbau_photozelle}{Aufbau zur Messung des Photostroms mit (von links nach rechts) Lichtquelle, Irisblende, Linse, Filterrad, Photozelle und Messaufbau. Grafik entnommen aus \cite[3]{Versuchsanleitung}}{0.6}
+\jafps{aufbau_photozelle}{Aufbau zur Messung des Photostroms mit (von links nach rechts) Lichtquelle, Irisblende, Linse, Filterrad, Photozelle und Messaufbau. Grafik entnommen aus \cite[3]{Versuchsanleitung}}{0.6}
 
-Zuletzt wurde noch eine Spannungsteilerschaltung zwischen die $\SI{12}{\V}$-Spannungsquelle und die Anode eingesetzt. %assuming die schaltskizze ist unnötig
+Zuletzt wurde noch eine Spannungsteilerschaltung zwischen die $\SI{12}{\V}$-Spannungsquelle und die Anode eingesetzt. 
 Dafür wurden die beiden Widerstände $\SI{100}{\ohm}$ und $\SI{330}{\ohm}$ genutzt, wobei über den kleineren Widerstand die Spannung für die nachfolgende Schaltung abgegriffen wurde. Durch die so verringerte maximale Gegenspannung konnte der gesamte Bereich, in dem ein Photostrom floss, präziser vermessen werden.
 Es ergab sich so für den Aufbau eine theoretische maximale Gegenspannung von
 \(
@@ -63,15 +61,12 @@ durch eine Variation der vorhandenen Lichtquanten zeitlich beeinflusst hätten.
 Für die Wellenlänge $\lambda = \SI{365}{\nano\meter}$ wurde anschließend die Blendenöffnung weiter geöffnet und so die Intensität des Lichts erhöht, sodass bei ausgestellter Gegenspannung ($U_G=\SI{0}{\V}$) eine um etwa Faktor $1,5$ größere Spannung an der Anode gemessen werden konnte. Die Kennlinie der Photozelle wurde anschließend für diese Wellenlänge ein drittes Mal gemessen.
 
 
-
 \section{Auswertung}
 
 Aus den gemessenen Kennlinien werden nun Werte für das Plancksche Wirkungsquantum $h$ und die Anoden-Austrittsarbeit $W_A$ bestimmt.
 
 Aus der Messung des Photostroms $I$, korrigiert um einem möglicherweise vorhandenen Anodenstrom $I_0$, der von einem minimalen Wert $U_0$ invers quadratisch mit dem Verlauf der angelegten Gegenspannung $U_G$ bis zu einem Sättigungsstrom $I_S$ steigt,
 kann durch Interpolation der gemessenen Werte als x-Achsenabschnitt einer Darstellung von $\sqrt{(I-I_0)}(U_G)$ die Grenzspannung für Licht einer festen Wellenlänge bestimmt werden.
-
-%insert hier Zeug zu piecewise linear function fit, interpolation linearer Teil über 0 & actual auswertung
 
 Die gemessenen Kennlinien für alle untersuchten Lichtfrequenzen sind in den Abbildungen \ref{fig:kennlinie_365nm} - \ref{fig:kennlinie_578nm_2} dargestellt. 
 
@@ -86,7 +81,7 @@ Die gemessenen Kennlinien für alle untersuchten Lichtfrequenzen sind in den Abb
 \jafpp{kennlinie_578nm}{1. Messung Kennlinie für $\SI{578}{\nano\meter}$}{kennlinie_578nm_2}{2. Messung Kennlinie für $\SI{578}{\nano\meter}$}
 
 
-\textcolor{blue}{hier fehlt noch Anmerkung zu Fehler der Werte}
+Als Fehler der gemessenen Spannungen wurde hierbei die Ungenauigkeit des Multimeters mit $5\%$ des jeweiligen Messwerts angenommen und daraus mit Gaußsche Fehlerfortpflanzung der Fehler des Photostroms $I$ berechnet.
 
 Um die Grenzspannung $U_0$ jeder der Kennlinien zu bestimmen, wurde eine stückweise lineare Funktion der Form 
 \begin{align}\label{eq:piecewise_linear_func}
@@ -142,20 +137,15 @@ der Wert des Planckschen Wirkungsquantums als $h=\frac{a}{e}$ sowie die Austritt
 
 Aus der Anpassung ergeben sich die Werte $h=\SI{6.425(0.05)e-34}{\joule \second}$ und \\
 $W_A=\SI{2.58(0.03)e-19}{\joule}$, also in Elektronenvolt $\frac{W_A}{e}=\SI{1.611}{\electronvolt}$.\\
-Der exakt definierte Literaturwert für das Plancksche Wirkungsquantum beträgt $h_{\text{Lit}}=\SI{6.62607015e-34}{\joule \second}$
-%\cite{KonstantenNIST}, 
-der bestimmte Wert weicht vom Literaturwert um $\frac{h_{\text{Lit}-h}}{h_{\text{Lit}}}=3,0\%$ ab, mit Einbezug der $1\sigma$-Umgebung um $2,3\%$. Die beiden Werte stimmen also nicht überein, weichen aber nur in geringem Maße voneinander ab, was in Anbetracht der sehr kleinen Größenordnung von $\mathcal{O}(\SI{e-34}{\joule \second})$ für die Validität der genutzten Methode der Photostrommessung zur Bestimmung von $h$ spricht. Die Plausibilität der Austrittsarbeit der genutzten Anode ist nur schwer überprüfbar, da ihr Wert stark von den Verhältnissen von Platin und Rhodium im spezifisch genutzten Bauteil abhängt. Typische Austrittsarbeiten liegen im Bereich von $\SIrange{2,2}{6,4}{\electronvolt}$ 
-%\cite[494]{kittelsolidstate},\cite{workfunctionchem}, \cite{workfunctionsgeorgia}.
-Die gemessene Austrittsarbeit ist also deutlich kleiner als verfügbare Vergleichswerte. Als Gründe für den Unterschied können vermutet werden: \textcolor{blue}{hier Gründe: Anodenstrom/Austrittsarbeit nicht korrekt kompensiert, Verunreinigungen in Legierung/Metallstruktur, komplexere Oberflächenstruktur, Kontaktpotential nicht korrekt in Bilanz betrachtet, höhere Temperatur $\rightarrow$ Aufweichung Fermikante (e-Energien größer als Fermienergie), noch was?.}
+Der exakt definierte Literaturwert für das Plancksche Wirkungsquantum beträgt $h_{\text{Lit}}=\SI{6.62607015e-34}{\joule \second}$\cite{KonstantenNIST}, 
+der bestimmte Wert weicht vom Literaturwert um $\frac{h_{\text{Lit}-h}}{h_{\text{Lit}}}=3,0\%$ ab, mit Einbezug der $1\sigma$-Umgebung um $2,3\%$. Die beiden Werte stimmen also nicht überein, weichen aber nur in geringem Maße voneinander ab, was in Anbetracht der sehr kleinen Größenordnung von $\mathcal{O}(\SI{e-34}{\joule \second})$ für die Validität der genutzten Methode der Photostrommessung zur Bestimmung von $h$ spricht. Die Plausibilität der Austrittsarbeit der genutzten Anode ist nur schwer überprüfbar, da ihr Wert stark von den Verhältnissen von Platin und Rhodium im spezifisch genutzten Bauteil abhängt. Typische Austrittsarbeiten liegen im Bereich von $\SIrange{2,2}{6,4}{\electronvolt}$ \cite[494]{kittelsolidstate},\cite{workfunctionchem}, \cite{workfunctionsgeorgia}.
+Die gemessene Austrittsarbeit ist also kleiner als verfügbare Vergleichswerte. Als Gründe für den Unterschied können einseits vermutet werden, dass es Verunreinigungen in der Metallstruktur der Anode oder eine komplexere Oberflächenstruktur, als im einfachen Modell einer Metallplatte angenommen wird. Außerdem kann es sein, dass das Kontaktpotential oder der Anodenstrom nicht korrekt in der Energiebilanz kompensiert wurden, sowie die Aufweichung der Fermikante bei Temperaturen über dem Nullpunkt, die hier deutlich erhöht waren. Aufgrund höherer Temperaturen können Elektronen auch höhere Energien haben als die Fermienergie $E_F$, was die Energiebilanz verändert. Da der Wert für $h$ sehr nah am Literaturwert ist, kann die Messung insgesamt als erfolgreich angesehen werden, eine höhere Genauigkeit ließe sich über eine größere Anzahl an Messreihen zu den gleichen oder weiteren Durchlasswellenlängen erreichen, da so die statistischen Fehler der Messungen sinken. 
 
-% here goes the geradenfit & anpassungsdiskussion
-
-%to do: intensitätsmessungen
 
 Zuletzt wird noch die Messung der Kennlinie bei einer höheren Lichtintensität untersucht. Hierbei werden für eine der beiden Messungen bei geringerer Intensität für $\lambda=\SI{365}{\nano\meter}$ (da die beiden Messungen in der bestimmten Grenzspannung $U_0$ im Rahmen ihrer Fehler übereinstimmen, ist egal, welche der beiden Messungen gewählt wird) und für die Messung bei höherer Intensität jeweils die Werte von Gegenspannung $U_G$ und um $I_0$ korrigierten Photostrom $\sqrt{I-I_0}$ gegeneinander aufgetragen, siehe Abbildung \ref{fig:intensitaet_variation}. 
 
-\jafps{intensitaet_variation}{Messungen der Photozellen-Kennlinie für $\SI{365}{\nano \meter}$ mit variierten Lichtintensitäten. Bei niedrigerer Intensität betrug die maximale Photospannung $U_{\text{I,max}}=\SI{2.8(0.1)}{\V}$, bei höherer Intensität $U_{\text{I,max}}=\SI{14.2(0.1)}{\V}$.}{0.7}
+\jafps{intensitaet_variation}{Messungen der Photozellen-Kennlinie für $\SI{365}{\nano \meter}$ mit variierten Lichtintensitäten. Bei niedrigerer Intensität betrug die maximahle Photospannung $U_{\text{I,max}}=\SI{2.8(0.1)}{\V}$, bei höherer Intensität $U_{\text{I,max}}=\SI{14.2(0.1)}{\V}$.}{0.7}
 
-\textcolor{blue}{Hier fehlt noch bisschen Interpretation zu Sättigungsstrom und gleicher Grenzspannung.}
 Wie theoretisch erwartet ist für beide Lichtintensitäten ein ähnlicher stückweise linearer Verlauf zu erkennen, die Grenzfrequenz in der Messung mit höherer Intensität berechnet sich über die gleiche Geradenanpassung wie für die vorherigen Kennlinienmessungen (siehe Gl. \ref{eq:gerade_u_gegen_nu} und \ref{eq:geradenfit}) als $
-U_{0,\text{hI}}=\SI{-1.69(0.08)}{\V}$. Die Grenzspannung bei geringerer Intensität und höherer Intensität von Licht der Wellenlänge $\SI{365}{\nano \meter}$ unterscheiden sich also im Rahmen der Messunsicherheiten der drei verschiedenen Messungen nicht. Die Steigungen der beiden Photostromgeraden unterscheiden sich hingegen -- die Messung mit höherer Intensität steigt stärker an. Bei einer positiven Gegenspannung, die in der experimentellen Durchführung nicht erreicht wurde, da dies eine Umpolung der Gegenspannung erfordert hätte, würde eine Sättigung des Photostroms erwartet, wobei die Kennlinie der Messung mit höherer Lichtintensität einen höheren Maximalwert erreichen würde\cite[63]{HakenWolf2013}, da hier mehr Lichtquanten Energie übertragen können als bei geringerer Lichtintensität, also geringerer Leistung. Die einzelnen Quanten haben bei beiden Messreihen die gleiche Energie $h\nu$, die Grenzspannung bleibt identisch, was mit den gemessenen Daten übereinstimmt.
+U_{0,\text{hI}}=\SI{-1.69(0.08)}{\V}$. Die Grenzspannung bei geringerer Intensität und höherer Intensität von Licht der Wellenlänge $\SI{365}{\nano \meter}$ unterscheiden sich also im Rahmen der Messunsicherheiten der drei verschiedenen Messungen nicht. Die Steigungen der beiden Photostromgeraden unterscheiden sich hingegen -- die Messung mit höherer Intensität steigt stärker an. Bei einer positiven Gegenspannung, die in der experimentellen Durchführung nicht erreicht wurde, da dies eine Umpolung der Gegenspannung erfordert hätte, würde eine Sättigung des Photostroms erwartet, wobei die Kennlinie der Messung mit höherer Lichtintensität einen höheren Maximalwert erreichen würde\cite[63]{HakenWolf2013}, da hier mehr Lichtquanten Energie übertragen können als bei geringerer Lichtintensität, also geringerer Leistung. Die einzelnen Quanten haben bei beiden Messreihen die gleiche Energie $h\nu$, die Grenzspannung bleibt identisch, was mit den gemessenen Daten übereinstimmt. Die Messung stimmt also mit den Erwartungen überein. 
+
