--- a/402-quantenlung-von-energie/latex/4_fazit.tex
+++ b/402-quantenlung-von-energie/latex/4_fazit.tex
@@ -1,4 +1,7 @@
 \chapter{Fazit}
 
 In diesem Versuch wurde das quantisierte Verhalten von Atomen an den Beispielen des äußeren photoelektrischen Effekts und der diskreten Emissionsspektra von Quecksilber und Wasserstoff (und Deuterium als Wasserstoff-Isotop) untersucht. \\
-Im ersten Versuchsteil wurde mithilfe der Gegenfeldmethode an einer Photozelle der Wert des Planckschen Wirkungsquantums auf $h=\SI{6.425(0.05)e-34}{\joule \second}$ bestimmt. Als Austrittsarbeit der genutzten Photozellenanode wurde der Wert $W_A=$
+Im ersten Versuchsteil wurde mithilfe der Gegenfeldmethode an einer Photozelle der Wert des Planckschen Wirkungsquantums auf $h=\SI{6.425(0.05)e-34}{\joule \second}$ bestimmt. Als Austrittsarbeit der genutzten Photozellenanode wurde der Wert $W_A=\SI{2.58(0.03)e-19}{\joule}$ (in Elektronenvolt entspricht dies $\SI{1.611}{\electronvolt}$). \\
+Im zweiten Versuchsteil wurde mithilfe des bekannten optischen Spektrums einer Quecksilberlampe die Gitterkonstante des im Aufbau genutzten Gitters auf $g=\SI{489(5)}{\nano \meter}$ bestimmt. Als Auflösungsvermögen wurde $mathcal{R} = 30675\pm10225$ abgeschätzt. \\
+Anschließend wurde mit einem Okular und einer CCD-Kamera die Balmer-Serie einer Wasserstoff-Deuterium-Lampe vermessen. Es wurden die $H_\alpha, H_\beta$ und $H_\gamma$-Linien beobachtet. Für die Messung mit Okular ergaben sich so als gemessene Wellenlängen: $H_\alpha: \SI{619(8)}{\nano \meter}, H_\beta: \SI{478(7)}{\nano\meter}, H_\gamma: \SI{445(7)}{\nano \meter}$. Für die Isotopieaufspaltung von Wasserstoff und Deuterium ergaben sich weiter die folgenden Wellenlängenunterschiede: $H_\alpha: \SI{3(1)e-1}{\nano \meter}, H_\beta: \SI{2(2)e-1}{\nano\meter}, H_\gamma: \SI{1(2)e-1}{\nano \meter}$. Aus der Messung mit der CCD-Kamera ergaben sich als Isotopieaufspaltungen dann: $H_\alpha: \SI{0,196(0,004)}{\nano \meter}, H_\beta: \SI{0,334(0,008)}{\nano\meter}$ (diese Messung wurde zweimal durchgeführt mit gleichem Ergebnis) und $H_\gamma: \SI{0,144(0,003)}{\nano \meter}$.
+Als Wert für das Plancksche Wirkungsquantum wurde aus den ermittelten Balmerlinienwellenlängen bestimmt: $h=\SI{6.59(0.02)e-34}{\joule\second}$ (passend innerhalb einer $1\sigma$-Umgebung zum ermittelten Wert im ersten Versuchsteil). Als Wert für die Rydbergkonstante wurde zuletzt noch bestimmt: $R_\infty = \SI{1.12(0.01)e7}{\per\meter}$.
